<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <EditText
            android:id="@+id/textField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.5"
            android:background="#fff"
            android:gravity="center"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:hint="@string/input_city_name" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:scaleType="fitCenter"
            android:src="@drawable/search"
            android:id="@+id/search"
            android:contentDescription="TODO" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textColor="#000000"
            android:textSize="30sp"
            android:id="@+id/weatherText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="#000000"
            android:textSize="20sp"
            android:id="@+id/tempText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            android:textColor="#000000"
            android:textSize="20sp"
            android:id="@+id/feelText"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="#000000"
            android:textSize="20sp"
            android:id="@+id/humidityText"
            />


    </LinearLayout>



</LinearLayout>